--- a/q&a_project_final_tree.ipynb
+++ b/q&a_project_final_tree.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Based losely on https://arxiv.org/abs/1611.01603\n",
+    "#https://github.com/allenai/bi-att-flow\n",
+    "#https://www.aclweb.org/anthology/D17-1151\n",
+    "#https://www.oreilly.com/learning/capturing-semantic-meanings-using-deep-learning\n",
+    "#https://cs224d.stanford.edu/reports/StrohMathur.pdf\n",
+    "#https://machinelearningmastery.com/develop-word-based-neural-language-models-python-keras/\n",
+    "#https://github.com/keras-team/keras/issues/4962\n",
+    "#https://gist.github.com/mbollmann/ccc735366221e4dba9f89d2aab86da1e\n",
+    "#https://github.com/abisee/pointer-generator\n",
+    "\n",
+    "#https://www.nltk.org/_modules/nltk/tree.html\n",
+    "#https://spacy.io/usage/linguistic-features#section-sbd\n",
+    "#https://github.com/facebookresearch/InferSent\n",
+    "#https://rajpurkar.github.io/mlx/qa-and-squad/\n",
+    "#https://github.com/aswalin/SQuAD"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
