--- a/q&a_project_final_deep.ipynb
+++ b/q&a_project_final_deep.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Based losely on https://arxiv.org/abs/1611.01603\n",
+    "#https://github.com/allenai/bi-att-flow\n",
+    "#https://www.aclweb.org/anthology/D17-1151\n",
+    "#https://www.oreilly.com/learning/capturing-semantic-meanings-using-deep-learning\n",
+    "#https://cs224d.stanford.edu/reports/StrohMathur.pdf\n",
+    "#https://machinelearningmastery.com/develop-word-based-neural-language-models-python-keras/\n",
+    "#https://github.com/keras-team/keras/issues/4962\n",
+    "#https://gist.github.com/mbollmann/ccc735366221e4dba9f89d2aab86da1e\n",
+    "#https://github.com/abisee/pointer-generator"
+   ]
   },
   {
    "cell_type": "markdown",
