added model summary

--- a/q&a_project_final_deep.ipynb
+++ b/q&a_project_final_deep.ipynb
@@ -2564,7 +2564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2625,12 +2625,13 @@
     "    #model = Sequential(inputs=_input, outputs=output)\n",
     "    model = Model(inputs=[_input,_q], outputs=output)\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "    model.summary()\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2670,7 @@
        "Name: context, dtype: object"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2689,7 +2690,39 @@
      "text": [
       "<class 'tensorflow.python.framework.ops.Tensor'>\n",
       "<class 'tensorflow.python.framework.ops.Tensor'>\n",
-      "\n"
+      "\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_20 (InputLayer)           (None, 1000)         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_20 (Embedding)        (None, 1000, 100)    8693500     input_20[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "input_19 (InputLayer)           (None, 1000)         0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "bidirectional_20 (Bidirectional (None, 1000, 100)    60400       embedding_20[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "embedding_19 (Embedding)        (None, 1000, 100)    8693500     input_19[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "time_distributed_20 (TimeDistri (None, 1000, 1000)   101000      bidirectional_20[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "bidirectional_19 (Bidirectional (None, 1000, 100)    60400       embedding_19[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "AttentionDecoder (AttentionDeco (None, 1000, 1)      842352      time_distributed_20[0][0]        \n",
+      "__________________________________________________________________________________________________\n",
+      "time_distributed_19 (TimeDistri (None, 1000, 1000)   101000      bidirectional_19[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_10 (Activation)      (None, 1000, 1)      0           AttentionDecoder[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_8 (Concatenate)     (None, 1000, 1001)   0           time_distributed_19[0][0]        \n",
+      "                                                                 activation_10[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_22 (Dense)                (None, 1000, 1000)   1002000     concatenate_8[0][0]              \n",
+      "==================================================================================================\n",
+      "Total params: 19,554,152\n",
+      "Trainable params: 2,167,152\n",
+      "Non-trainable params: 17,387,000\n",
+      "__________________________________________________________________________________________________\n"
      ]
     }
    ],
